# auto-opensea

./: .gitignore  pyproject.toml
seacaptain/: __init__.py  captain.py  utils.py
tests/: test_context.py
