[tool.poetry]
name = "seacaptain"
version = "0.1.1"
description = "A set of utilities for batch uploading and listing NFTs to the OpenSea platform."
authors = ["Elias Gabriel <egabriel@olin.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
orjson = "^3.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
